--- a/web_all.yml
+++ b/web_all.yml
@@ -14,14 +14,13 @@
     systemd:
       name: httpd
       enabled: yes
-      masked: no
+      masked: no 
 
-- hosts: web
   tasks:  
   - name: Download Templates
     get_url:
       url: https://www.free-css.com/assets/files/free-css-templates/download/page253/estateagency.zip
-      dest: "/home/centos/"
+      dest: "/var/www/html/"
 
 - hosts: web
   tasks:
@@ -33,13 +32,13 @@
   - name: unzip
     unarchive:
       src: https://www.free-css.com/assets/files/free-css-templates/download/page253/estateagency.zip
-      dest: "/home/centos"
+      dest: "/var/www/html/"
       remote_src: yes
 
 - hosts: web
   tasks:
   - name: copy file
-    shell: "rsync -r /home/centos/EstateAgency/*   /var/www/html"
+    shell: "rsync -r /var/www/html/EstateAgency/*   /var/www/html"
 - hosts: web
   tasks:
   - name: change uid and gid
@@ -48,10 +47,7 @@
 
 - hosts: web
   tasks:
-  - selinux:
+  - name: disable selinux
+    selinux:
       state: disabled
 
-- hosts: web
-  tasks:
-  - selinux:
-      state: permissive
