--- a/wordpress.yml
+++ b/wordpress.yml
@@ -46,7 +46,7 @@
   - name: Download Templates
     get_url:
       url: https://wordpress.org/latest.zip
-      dest: "/home/centos/"
+      dest: "/var/www/html/"
 
 - hosts: web
   tasks:
@@ -58,13 +58,13 @@
   - name: unzip
     unarchive:
       src: https://wordpress.org/latest.zip
-      dest: "/home/centos"
+      dest: "/var/www/html/"
       remote_src: yes
 
 - hosts: web
   tasks:
   - name: copy file
-    shell: "rsync -r /home/centos/wordpress/*   /var/www/html"
+    shell: "rsync -r /var/www/html/wordpress/*   /var/www/html"
 
 - hosts: web
   tasks:
